--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ ehthumbs_vista.db
 # Folder config file
 [Dd]esktop.ini
 bootstrap-5.2.3-dist
+backup-css
 
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
